Working on statistics collection, change proxy class definition and start to integrate inactivity check in K8sServeMonitor.Add default value in application.yml for inactivity-time and scale-to-zero.