@@ -3,9 +3,11 @@ package it.smartcommunitylabdhub.framework.k8s.infrastructure.k8s;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 
+import com.fasterxml.jackson.databind.JsonMappingException;
 import io.kubernetes.client.common.KubernetesObject;
 import io.kubernetes.client.custom.ContainerMetrics;
 import io.kubernetes.client.custom.IntOrString;
+import io.kubernetes.client.custom.PodMetrics;
 import io.kubernetes.client.custom.Quantity;
 import io.kubernetes.client.openapi.ApiClient;
 import io.kubernetes.client.openapi.ApiException;
@@ -14,6 +16,7 @@ import it.smartcommunitylabdhub.commons.annotations.infrastructure.FrameworkComp
 import it.smartcommunitylabdhub.commons.models.enums.State;
 import it.smartcommunitylabdhub.framework.k8s.exceptions.K8sFrameworkException;
 import it.smartcommunitylabdhub.framework.k8s.infrastructure.proxy.envoy.EnvoyProxyBuilder;
+import it.smartcommunitylabdhub.framework.k8s.objects.CoreMetric;
 import it.smartcommunitylabdhub.framework.k8s.objects.CoreVolume;
 import it.smartcommunitylabdhub.framework.k8s.objects.envoy.CoreProxyStat;
 import it.smartcommunitylabdhub.framework.k8s.runnables.K8sServeRunnable;
@@ -597,49 +600,89 @@ public class K8sServeFramework extends K8sBaseFramework<K8sServeRunnable, V1Serv
 
     // Use rest template to collect envoy stats
     // the same as for metrics...difference are on the ojbect that is retrieved.
-    public List<ContainerMetrics> proxyMetrics(V1Service object) throws K8sFrameworkException {
+    public List<CoreMetric> proxyMetrics(V1Service object) throws K8sFrameworkException {
         if (object == null || object.getMetadata() == null) {
-            return List.of();
+            return null;
+        }
+
+        if (Boolean.TRUE != collectMetrics) {
+            return Collections.emptyList();
         }
 
         try {
+            List<CoreMetric> metrics = new ArrayList<>();
+            List<V1Pod> pods = pods(object);
 
-            // Prepare headers and request entity
-            HttpHeaders headers = new HttpHeaders();
-            headers.setAccept(List.of(MediaType.APPLICATION_JSON));
-            HttpEntity<Void> entity = new HttpEntity<>(headers);
+            List<PodMetrics> podMetrics = metricsApi.getPodMetrics(namespace).getItems();
 
-            // Build the URL
-            String url = UriComponentsBuilder
-                    .fromHttpUrl("http://" + object.getMetadata().getName() + ":9901/stats")
-                    .queryParam("format", "json")
-                    .toUriString();
+            for (V1Pod p : pods) {
+                if (p.getMetadata() != null && p.getStatus() != null) {
+                    String pod = p.getMetadata().getName();
 
-            // Make HTTP GET request
-            ResponseEntity<String> response = restTemplate.exchange(
-                    url,
-                    HttpMethod.GET,
-                    entity,
-                    String.class);
+                    PodMetrics metric = podMetrics
+                            .stream()
+                            .filter(m -> pod.equals(m.getMetadata().getName()))
+                            .findFirst()
+                            .orElse(null);
+
+                    if (metric != null && metric.getContainers() != null) {
+
+                        // Prepare headers and request entity
+                        HttpHeaders headers = new HttpHeaders();
+                        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+                        HttpEntity<Void> entity = new HttpEntity<>(headers);
+
+                        // Build the URL
+                        String url = UriComponentsBuilder
+                                .fromHttpUrl("http://" + object.getMetadata().getName() + ":9901/stats")
+                                .queryParam("format", "json")
+                                .toUriString();
+
+                        // Make HTTP GET request
+                        ResponseEntity<String> response = restTemplate.exchange(
+                                url,
+                                HttpMethod.GET,
+                                entity,
+                                String.class);
 
 
-            List<ContainerMetrics> metrics = new ArrayList<>(mapper.readValue(response.getBody(), CoreProxyStat.class).getStats()
-                    .stream().filter(stat -> stat.getValue() != null).map(stat -> {
-                        ContainerMetrics containerMetrics = new ContainerMetrics();
-                        containerMetrics.setName(stat.getName());
-                        containerMetrics.setUsage(Map.of(
-                                stat.getName(), new Quantity(
-                                        new BigDecimal(stat.getValue()),
-                                        Quantity.Format.BINARY_SI)));
+                        List<ContainerMetrics> proxyMetrics = new ArrayList<>(
+                                mapper.readValue(response.getBody(), CoreProxyStat.class).getStats()
+                                        .stream().filter(stat -> stat.getValue() != null).map(stat -> {
+                                            ContainerMetrics containerMetrics = new ContainerMetrics();
+                                            containerMetrics.setName(stat.getName());
+                                            containerMetrics.setUsage(Map.of(
+                                                    stat.getName(), new Quantity(
+                                                            new BigDecimal(stat.getValue()),
+                                                            Quantity.Format.BINARY_SI)));
 
-                        return containerMetrics;
-                    }).toList());
+                                            return containerMetrics;
+                                        }).toList());
+
+                        metrics.add(
+                                new CoreMetric(
+                                        pod,
+                                        proxyMetrics,
+                                        metric.getTimestamp(),
+                                        metric.getWindow(),
+                                        namespace));
+                    }
+                }
+            }
 
             return metrics;
-        } catch (JsonProcessingException e) {
+        } catch (ApiException e) {
             log.error("Error with k8s: {}", e.getMessage());
             if (log.isTraceEnabled()) {
-                log.trace("k8s json processing exception: {}", e.getMessage());
+                log.trace("k8s api response: {}", e.getResponseBody());
+            }
+
+            throw new K8sFrameworkException(e.getMessage());
+        } catch (JsonProcessingException e) {
+
+            log.error("Error with k8s while mapping proxy metrics: {}", e.getMessage());
+            if (log.isTraceEnabled()) {
+                log.trace("Error with k8s while mapping proxy metrics: {}", e.getCause());
             }
 
             throw new K8sFrameworkException(e.getMessage());
